@@ -1,3 +1,8 @@
+2012-05-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/display.c (display): More informative display of position in
+	a multi-screenful result set.
+
 2012-04-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/display.c (fields): Move "samuel" special function back to
